<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/fragment_menu_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_side_medium"
        android:layout_marginEnd="@dimen/margin_side_medium"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/fragment_menu_journal"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginStart="@dimen/margin_side_medium"
        android:layout_marginTop="@dimen/margin_side_medium"
        android:layout_marginEnd="@dimen/margin_side_medium"
        android:layout_marginBottom="@dimen/margin_side_medium"
        android:text="@string/journal"
        app:layout_constraintBottom_toTopOf="@id/fragment_menu_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/fragment_menu_calculator"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginStart="@dimen/margin_side_medium"
        android:layout_marginTop="@dimen/margin_side_medium"
        android:layout_marginEnd="@dimen/margin_side_medium"
        android:layout_marginBottom="@dimen/margin_side_small"
        android:text="@string/calculator"
        app:layout_constraintBottom_toTopOf="@id/fragment_menu_delimiter_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_menu_delimiter_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/fragment_menu_diets"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginStart="@dimen/margin_side_medium"
        android:layout_marginTop="@dimen/margin_side_small"
        android:layout_marginEnd="@dimen/margin_side_medium"
        android:text="@string/diets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_menu_delimiter_horizontal"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="216dp"/>

    <Button
        android:id="@+id/fragment_menu_notifications"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginStart="@dimen/margin_side_medium"
        android:layout_marginTop="@dimen/margin_side_medium"
        android:layout_marginEnd="@dimen/margin_side_medium"
        android:text="@string/notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_menu_diets"/>

</androidx.constraintlayout.widget.ConstraintLayout>