<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/fragment_registration_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_medium"
        android:layout_marginEnd="@dimen/margin_side_medium"
        android:layout_marginBottom="@dimen/margin_side_medium"
        android:ems="10"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/fragment_registration_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/fragment_registration_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_medium"
        android:layout_marginEnd="@dimen/margin_side_medium"
        android:layout_marginBottom="@dimen/margin_side_medium"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/fragment_registration_delimiter_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_registration_delimiter_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <Button
        android:id="@+id/fragment_registration_registration"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_marginStart="@dimen/margin_side_medium"
        android:layout_marginTop="@dimen/margin_side_large"
        android:layout_marginEnd="@dimen/margin_side_medium"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_registration_delimiter_horizontal"/>
</androidx.constraintlayout.widget.ConstraintLayout>
